crates/efr-cli/src/follow/view/snapshots/efr__follow__view__tests__a_call_of_a_command_of_several_lines_shows_each_line.snap
---
source: crates/efr-cli/src/follow/view/tests.rs
expression: readable(&step.out)
---
\e[?2026h\e[33m•\e[0m \e[36m$ systemctl --failed --no-pager\e[0m
    \e[36mjournalctl -b -n 20 --no-pager\e[0m
\e[?2026l
