crates/efr-cli/src/follow/view/snapshots/efr__follow__view__tests__a_failure_in_the_sandbox_names_its_exit_and_the_turn_says_once_where_it_ran.snap
---
source: crates/efr-cli/src/follow/view/tests.rs
expression: err
---
· $ cargo nextest run -p efr-cli
  ✓

· $ cargo add serde
  ✗ exit 101
  network: blocked evil.example:443 (not on the allow list)
  sandbox: stopped when the call ended: vite

sandbox: writes in the project, $SCRATCH, private /tmp; no network
