crates/efr-cli/src/follow/view/snapshots/efr__follow__view__tests__a_fallback_says_so_at_the_start_of_the_turn.snap
---
source: crates/efr-cli/src/follow/view/tests.rs
expression: readable(&step.out)
---
\e[?2026h\e[2mauto is not available here; this turn runs as cautious: Landlock ABI 6\e[0m
\e[?2026l
