crates/efr-cli/src/follow/view/snapshots/efr__follow__view__tests__a_hidden_input_asks_below_the_prompt_and_never_echoes.snap
---
source: crates/efr-cli/src/follow/view/tests.rs
expression: readable(&step.out)
---
\e[?2026h\r\e[2A\e[J\e[33m•\e[0m \e[2m$ sudo pacman -Syu\e[0m
\e[2m  │ \e[0m\e[1;33m[sudo] password for egg:\e[0m
type the answer and press Enter; it is not shown, and the agent sees it only if the program prints it
\e[?2026l
