crates/efr-cli/src/follow/view/snapshots/efr__follow__view__tests__a_question_without_an_exit_shows_each_line_of_a_command_of_several.snap
---
source: crates/efr-cli/src/follow/view/tests.rs
expression: err
---
$ cd src (and 3 more lines)
approval needed: shell: run 4 lines:
  1  cd src
  2  export RUST_LOG=debug
  3  cargo test -p efr-cli
  4  unset RUST_LOG
allow? y = yes, n = no
