crates/efr-cli/src/follow/view/snapshots/efr__follow__view__tests__a_routine_command_shows_the_sandbox_once_and_a_failure_says_sandbox.snap
---
source: crates/efr-cli/src/follow/view/tests.rs
expression: err
---
$ cargo nextest run -p efr-cli
sandbox: writes in the project, $SCRATCH, private /tmp; no network
$ cargo add serde
shell exited with 101 (sandbox)
network: blocked evil.example:443 (not on the allow list)
sandbox: stopped when the call ended: vite
