crates/efr-cli/src/follow/view/snapshots/efr__follow__view__tests__a_setup_failure_says_why_on_its_own_line.snap
---
source: crates/efr-cli/src/follow/view/tests.rs
expression: err
---
· $ cargo test
  ✗ the sandbox could not start: bwrap: Can't mount proc on /newroot/proc; efr checks it again
