crates/efr-cli/src/follow/view/snapshots/efr__follow__view__tests__a_terminal_reply_commits_complete_blocks_and_redraws_the_live_zone.snap
---
source: crates/efr-cli/src/follow/view/tests.rs
expression: "writes.join(\"\\n---\\n\")"
---
\e[?2026h\e[1;35mPlan\e[0m
\e[?2026l
---
\e[?2026h\r\e[1A\e[J\e[1;35mPlan\e[0m

First we
\e[?2026l
---
\e[?2026h\r\e[2A\e[J
First we check the logs.

• one
\e[?2026l
---
\e[?2026h\r\e[2A\e[J
• one
• two
\e[?2026l
---
