crates/efr-cli/src/follow/view/snapshots/efr__follow__view__tests__a_visible_input_echoes_what_is_typed_until_it_is_sent.snap
---
source: crates/efr-cli/src/follow/view/tests.rs
expression: readable(&typed.out)
---
\e[?2026h\r\e[4A\e[J\e[2m:: Proceed with installation? [Y/n]\e[0m
\e[1;33mtype the answer and press Enter; the agent sees it\e[0m
> y
\e[?2026l
