crates/efr-cli/src/follow/view/snapshots/efr__follow__view__tests__an_approval_asks_below_the_live_zone_when_keys_can_be_read.snap
---
source: crates/efr-cli/src/follow/view/tests.rs
expression: readable(&step.out)
---
\e[?2026h\e[1;33mapproval needed:\e[0m write ~/.zshrc
\e[1;31m-\e[0m\e[31ma\e[0m
\e[1;32m+\e[0m\e[32mb\e[0m
\e[2mallow? \e[0m\e[1my\e[0m\e[2m = yes, \e[0m\e[1mn\e[0m\e[2m = no\e[0m
\e[?2026l
